Refactor to use latest java features